Nano VM (3.4.3-2)
	Now using latest libasmjit.
	Building libasmjit.so this time.
	
	Edit /etc/ld.so.conf config file and add the directory in which the libasmjit.so is in.
	In my case: /home/stefan/Seafile/nanovm/bin/linux-x86-64.
	
-- Stefan Pietzonke <jay-t@gmx.net>  Mon 2 May 2016 20:42 +0200	
	
Nano VM (3.4.3)
	Fixed portable install path for libraries: "../../lib/".
	
-- Stefan Pietzonke <jay-t@gmx.net>  Thu 24 Mar 2016 21:00 +0200

Nano VM (3.4.2)
	Nano is now "portable" and runs from an USB stick.
	The executables begin then with "port" in the name:
	
	portnanovm, portnanoc...
	
	So no installation is needed.
	
	Added: vm/rs232.c vm/rs232.h
	rs232_shared_lib
	
	vm/Makefile.am: AM_LDFLAGS = -Wl,--export-dynamic
	
	This is the RS232 port serial library.
	I had to put the RS232 functions into the nanovm executable
	and make it export dynamic. So the library can access the functions.
	
	The RS232 functions are from Teunis van Beelen.
	
	Added: statifier/
	The tool for collecting all shared libraries needed by a program.
	(Linux)
	
-- Stefan Pietzonke <jay-t@gmx.net>  Sat 21 Feb 2016 07:15 +0100

Nano VM (3.4)
	Added latest AsmJit JIT-compiler code from github (original code branch)
	
	JIT-compiler: new: band, bor, bxor opcodes (MMX registers).
	
	Continued work on flow2.
	
-- Stefan Pietzonke <jay-t@gmx.net>  Sat 19 Dec 2015 15:30 +0100

nano (3.3.3)
	Nanoc: new experimental #ATOMIC / #ATOMIC_END for setting vector array start and end elements.
	Threading safe!

	vm/exe_elist () added QINT type at pvarlist constants init. 
	
	exe_files.c alignment bugfix for Android/ARM.
	
	new: vm/dlload.c load DLL/so shared libraries.
	Data can be exchanged over thread stack.
	See example in nanovm/prog/dll!
	
	new: array data can be exchanged over DLL/so library.
	See new example in dll directory.
	
	bugfix: comp/translate.c push variable always into register if only one argument.
	Needed to make for example "ucase (string);" work!
	